--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "prettus/l5-repository": "^2.5",
         "laravelcollective/html": "5.2.*",
-        "lucadegasperi/oauth2-server-laravel": "5.1.*"
+        "lucadegasperi/oauth2-server-laravel": "5.1.*",
+        "league/fractal": "^0.14.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
