--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "prettus/l5-repository": "^2.5",
         "laravelcollective/html": "5.2.*",
         "lucadegasperi/oauth2-server-laravel": "5.1.*",
-        "league/fractal": "^0.14.0"
+        "league/fractal": "^0.14.0",
+        "barryvdh/laravel-cors": "^0.8.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
