--- a/ionic/package.json
+++ b/ionic/package.json
@@ -3,11 +3,12 @@
   "version": "1.1.1",
   "description": "ionic: An Ionic project",
   "dependencies": {
+    "@ionic/cloud-angular": "^0.7.0",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -25,7 +26,13 @@
       "locator": "https://github.com/phonegap/phonegap-plugin-barcodescanner.git",
       "id": "phonegap-plugin-barcodescanner"
     },
-    "cordova-plugin-compat"
+    "cordova-plugin-compat",
+    {
+      "variables": {
+        "SENDER_ID": "749443376509"
+      },
+      "locator": "phonegap-plugin-push"
+    }
   ],
   "cordovaPlatforms": [
     {
