--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "lucadegasperi/oauth2-server-laravel": "5.1.*",
         "league/fractal": "^0.14.0",
         "barryvdh/laravel-cors": "^0.8.2",
-        "pusher/pusher-php-server": "~2.0"
+        "pusher/pusher-php-server": "~2.0",
+        "dmitrovskiy/ionic-push-php": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
